[package]
name = "api"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = "2.8.1"

[build-dependencies]
protoc-grpcio = "1.0.2"
