[package]
name = "rustybgpd"
version = "0.2.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1"
tonic = "0.14"
tonic-prost = "0.14"
bytes = "1"
chrono = "0.4"
prost = "0.14"
prost-types = "0.14"
prost-derive = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
clap = "4"
futures = "0.3"
futures-core = "0.3"
patricia_tree = "0.10"
regex = "1"
hostname = "0.4"
fnv = "1"
num_cpus = "1"
socket2 = { version = "0.6", features = ["all"] }
byteorder = "1"
once_cell = "1"
thiserror = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
toml = "0.9"
nix = { version = "0.30", features = ["socket"] }
uuid = { version = "1", features = ["v4"] }
ip_network_table-deps-treebitmap = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
