[package]
name = "rustybgp-kernel"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2024"

[dependencies]
rtnetlink = "0.21"
futures = "0.3"
thiserror = "2"
rustybgp-packet = { path = "../packet" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
