[package]
name = "rustybgp-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rtnetlink = "0.21"
futures = "0.3"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
rustybgp-packet = { path = "../packet" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
